Fixed z-index

--- a/Styles/Main.css
+++ b/Styles/Main.css
@@ -101,7 +101,7 @@ body::-webkit-scrollbar {
     width: 100%;
     height: 0.25rem;
     background: rgb(135, 0, 135);
-    z-index: 3;
+    z-index: 4;
 }
 
 #progressbar {
@@ -112,7 +112,7 @@ body::-webkit-scrollbar {
     width: 0%;
     height: 0.25rem;
     background: rgb(255, 0, 255);
-    z-index: 4;
+    z-index: 5;
 }
 
 #arrow {
